--- a/src/CSS/Photo.css
+++ b/src/CSS/Photo.css
@@ -1,6 +1,9 @@
 .photo {
     position: relative;
-    margin: 200px;
+    display: flex;
+    align-items: flex-start;
+    /* margin:0%; */
+    /* box-sizing: border-box; */
   }
 
   
