--- a/src/CSS/Dropdown.css
+++ b/src/CSS/Dropdown.css
@@ -1,6 +1,8 @@
 .dropdown {
     position: absolute;
     display: flex;
+    flex-direction: column;
+    /* align-items: center; */
     gap: 20px;
   }
 
@@ -22,6 +24,7 @@
     gap: 10px;
     background-color: #1f1f1f;
     border-radius: 0.5rem;
+    /* align-self: center; */
     /* border: solid red 2px; */
   }
 
@@ -36,4 +39,10 @@
 
   .character:hover {
     background-color: #0a0a0a;
+  }
+
+  .feedback {
+    position: absolute;
+    border: red solid 2px;
+    padding: 20px;
   }
